Use full TransactionsList in Category show page, refactor CategoryStore and show page

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -605,7 +605,7 @@
           "title": "Categories"
         },
         "show": {
-          "disable": "Delete",
+          "disable": "Disable",
           "edit": "Edit",
           "expenses": "Spends",
           "money_in": "Income",
