--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -663,7 +663,7 @@
           "title": "Categorias"
         },
         "show": {
-          "disable": "Deletar",
+          "disable": "Desabilitar",
           "edit": "Editar",
           "expenses": "Gastos",
           "money_in": "Receita",
