--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -26,7 +26,7 @@ pt-BR:
         money_in: Receita
         expenses: Gastos
         edit: Editar
-        disable: Deletar
+        disable: Desabilitar
         new_subcategory: Criar Subcategoria
         subcategories_options: Opções
         show_all_subcategories: Mostrar Desabilitadas
