--- a/config/locales/controllers.en.yml
+++ b/config/locales/controllers.en.yml
@@ -8,7 +8,10 @@ en:
       error: 'Category "%{name}" could not be updated: %{error}'
     destroy:
       success: 'Category "%{name}" was successfully disabled.'
-      error: 'Category "%{name} could not be disabled.'
+      error: 'Category "%{name}" could not be disabled.'
+    reenable:
+      success: 'Category "%{name}" was successfully re-enabled.'
+      error: 'Category "%{name}" could not be re-enabled.'
 
   current_profiles:
     create:
