--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -340,6 +340,7 @@
         },
         "odd": "must be odd",
         "other_than": "must be other than %{count}",
+        "password_too_long": "is too long",
         "present": "must be blank",
         "required": "must exist",
         "taken": "has already been taken",
@@ -389,6 +390,7 @@
         "format": {
           "delimiter": ",",
           "format": "%u%n",
+          "negative_format": "-%u%n",
           "precision": 2,
           "separator": ".",
           "significant": false,
@@ -434,7 +436,8 @@
             "kb": "KB",
             "mb": "MB",
             "pb": "PB",
-            "tb": "TB"
+            "tb": "TB",
+            "zb": "ZB"
           }
         }
       },
